--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3213,7 +3213,51 @@
           }
         ]
       },
+      56: {
+        title: "Spice and Wolf",
+        desc: "Lawrence, un comerciante ambulante, encuentra a una chica desnuda con orejas y cola de lobo dormida en su carreta. Ella es Holo, una diosa de la cosecha con una bestia indómita acechando en su interior. Armados con su astucia callejera y sus instintos animales, un simple vendedor ambulante y una deidad olvidada viajan por el campo mientras cosechan las riquezas de la felicidad y exponen la bancarrota que habita en el corazón humano",
+        cover: "drgfedfgdf.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "spice.jpg",
+            eps: [
+              { title: "Spice and Wolf T1 Cap 1"},
+              { title: "Spice and Wolf T1 Cap 2"},
+              { title: "Spice and Wolf T1 Cap 3"},
+              { title: "Spice and Wolf T1 Cap 4"},
+              { title: "Spice and Wolf T1 Cap 5"},
+              { title: "Spice and Wolf T1 Cap 6"},
+              { title: "Spice and Wolf T1 Cap 7"},
+              { title: "Spice and Wolf T1 Cap 8"},
+              { title: "Spice and Wolf T1 Cap 9"},
+              { title: "Spice and Wolf T1 Cap 10"},
+              { title: "Spice and Wolf T1 Cap 11"},
+              { title: "Spice and Wolf T1 Cap 12"},
+              { title: "Spice and Wolf T1 Cap 13"},
 
+            ]
+          },
+          {
+            num: 2,
+            cover: "spicepor.jpg",
+            eps: [
+              { title: "Spice and Wolf T1 Cap 1"},
+              { title: "Spice and Wolf T1 Cap 2"},
+              { title: "Spice and Wolf T1 Cap 3"},
+              { title: "Spice and Wolf T1 Cap 4"},
+              { title: "Spice and Wolf T1 Cap 5"},
+              { title: "Spice and Wolf T1 Cap 6"},
+              { title: "Spice and Wolf T1 Cap 7"},
+              { title: "Spice and Wolf T1 Cap 8"},
+              { title: "Spice and Wolf T1 Cap 9"},
+              { title: "Spice and Wolf T1 Cap 10"},
+              { title: "Spice and Wolf T1 Cap 11"},
+              { title: "Spice and Wolf T1 Cap 12"},
+            ]
+          }
+        ]
+      },
 
 
 
