--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
       {id:53, title:"Futari Solo Camp", aliases: ["Solo Camping for Two"], img:"futaripor.jpg", rating:4.5, genres:["Romance","Comedia","Slice of Life","Seinen"]},
       {id:54, title:"Tōjima Tanzaburō wa Kamen Rider ni Naritai", aliases: ["Tojima Wants to Be a Kamen Rider"], img:"tojima1.jpg", rating:4.8, genres:["Comedia","Acción","Tokusatsu","Seinen"]},
       {id:55, title:"Alma-chan wa Kazoku ni Naritai", aliases: ["Alma-chan Wants to Be a Family!"], img:"almachan.jpg", rating:4.6, genres:["Comedia","Romance","Ciencia ficción","Seinen"]},
+      {id:56, title:"Spice and Wolf", aliases: ["Okami to Kōshinryō"], img:"drgfedfgdf.jpg", rating:4.8, genres:["Acción","Romance","Ciencia ficción","Aventura","Fantasía","Drama","Seinen"]},
     ];
 
     /* ----------------------------
