--- a/video-player.html
+++ b/video-player.html
@@ -2310,7 +2310,37 @@
           "5": { link:'https://drive.google.com/file/d/1h2Pk9Z-ZLzo_ULtRnbvzlamjrBfaA8-7/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 5' },
         }
       },
-
+      "56": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1w2dKPPq4VE1Ep2Vm8ZI9nIi_RE9YR87u/preview', title:'Spice and Wolf T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1D12R4n8HbmLqPWQIt8t2O3FMo7Yh_wFT/preview', title:'Spice and Wolf T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1C0JTi0olk0MoSKP7gwn0HiOvkLR36GaV/preview', title:'Spice and Wolf T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1R82WtxDG7q_0H-RVrnjyp-GtJPjIoYl1/preview', title:'Spice and Wolf T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1DqWuCyjGOxKSUtByq-070oJta1lXw4x0/preview', title:'Spice and Wolf T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/15JOZAS3hKFN4UAghltVDaytioyG-TDHq/preview', title:'Spice and Wolf T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/166l8NchxLFAQkCdIYkJkIUt2-M0vg9sl/preview', title:'Spice and Wolf T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1FAaeMNavgaE85OCpMjZpotVGekBUYY2r/preview', title:'Spice and Wolf T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1VdZNvNAsGWZJPPAkg3OcC1wl_WI40rhl/preview', title:'Spice and Wolf T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/19DzLkbU2MgkooyfnfTaCRvxQDHSq92VX/preview', title:'Spice and Wolf T1 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1hKGuI5Roij3WsJlN1t76Yhu5YL7_nY2S/preview', title:'Spice and Wolf T1 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/11zG8Lbbvei5XR9soycL56KLlwDEsWHl6/preview', title:'Spice and Wolf T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1JHX0v0IXV5GlwsN-vJzOArG_n23aHfsQ/preview', title:'Spice and Wolf T1 Cap 13' },
+        },
+        "2": {
+          "1": { link:'https://drive.google.com/file/d/1pglakSh-bD0unhSIuBHomPUdIPtm40iV/preview', title:'Spice and Wolf T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1wNnt0rn84YzzTAOck6OgU3kTPykFOA0s/preview', title:'Spice and Wolf T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1HR_N7Y3iwQNAdm-UuzU_ILXJQ7Qa3X7I/preview', title:'Spice and Wolf T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1JYyO4-1ilWUdQYrxwIHorjweH8Q4jbE7/preview', title:'Spice and Wolf T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1v04Gbvg6knodhu71HC-RHZeQdvFPdLFL/preview', title:'Spice and Wolf T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1aYn9OkC20MRnILNC8f22IMbyTAQ2rPjp/preview', title:'Spice and Wolf T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1GyFLmD18niH-s3f-irhMzlOYP-Obs7so/preview', title:'Spice and Wolf T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1ZWTAYc2Qkj61Z9cfIQyF9OXluPedrsve/preview', title:'Spice and Wolf T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1tpRqFwEpuQVjmkdvgGspg4HSmnKJRsxT/preview', title:'Spice and Wolf T2 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1AhERccJvIMI8u32agU-JgwC5dok6J_sJ/preview', title:'Spice and Wolf T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1ov0f9V3kcwTGx8KtMTDNJzLxFC2v4KlX/preview', title:'Spice and Wolf T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1UogckdZh4kQN7HFV42i4FZVmasGqmwb2/preview', title:'Spice and Wolf T2 Cap 12' },
+        }
+      },
 
 
 
