--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2341,6 +2341,17 @@
             cover: "https://www.dropbox.com/scl/fi/1r0djgkxmptdfe2ltkbk1/onepunch3.jpg?rlkey=4e2i0r1cvl5ufsh5f41fa2sqm&st=woghk9gy&raw=1",
             eps: [
               { title: "One Punch-Man T3 Cap 1"},
+              { title: "One Punch-Man T3 Cap 2"},
+              { title: "One Punch-Man T3 Cap 3"},
+              { title: "One Punch-Man T3 Cap 4"},
+              { title: "One Punch-Man T3 Cap 5"},
+              { title: "One Punch-Man T3 Cap 6"},
+              { title: "One Punch-Man T3 Cap 7"},
+              { title: "One Punch-Man T3 Cap 8"},
+              { title: "One Punch-Man T3 Cap 9"},
+              { title: "One Punch-Man T3 Cap 10"},
+              { title: "One Punch-Man T3 Cap 11"},
+              { title: "One Punch-Man T3 Cap 12"},
             ]
           }
         ]
@@ -3235,25 +3246,18 @@
               { title: "Spice and Wolf T1 Cap 11"},
               { title: "Spice and Wolf T1 Cap 12"},
               { title: "Spice and Wolf T1 Cap 13"},
-
-            ]
-          },
-          {
-            num: 2,
-            cover: "spicepor.jpg",
-            eps: [
-              { title: "Spice and Wolf T1 Cap 1"},
-              { title: "Spice and Wolf T1 Cap 2"},
-              { title: "Spice and Wolf T1 Cap 3"},
-              { title: "Spice and Wolf T1 Cap 4"},
-              { title: "Spice and Wolf T1 Cap 5"},
-              { title: "Spice and Wolf T1 Cap 6"},
-              { title: "Spice and Wolf T1 Cap 7"},
-              { title: "Spice and Wolf T1 Cap 8"},
-              { title: "Spice and Wolf T1 Cap 9"},
-              { title: "Spice and Wolf T1 Cap 10"},
-              { title: "Spice and Wolf T1 Cap 11"},
-              { title: "Spice and Wolf T1 Cap 12"},
+              { title: "Spice and Wolf T1 Cap 14"},
+              { title: "Spice and Wolf T1 Cap 15"},
+              { title: "Spice and Wolf T1 Cap 16"},
+              { title: "Spice and Wolf T1 Cap 17"},
+              { title: "Spice and Wolf T1 Cap 18"},
+              { title: "Spice and Wolf T1 Cap 19"},
+              { title: "Spice and Wolf T1 Cap 20"},
+              { title: "Spice and Wolf T1 Cap 21"},
+              { title: "Spice and Wolf T1 Cap 22"},
+              { title: "Spice and Wolf T1 Cap 23"},
+              { title: "Spice and Wolf T1 Cap 24"},
+              { title: "Spice and Wolf T1 Cap 25"},
             ]
           }
         ]
