--- a/video-player.html
+++ b/video-player.html
@@ -1508,6 +1508,7 @@
           "6": { link:'https://www.dropbox.com/scl/fi/mvvtwr07x3v320l9liokf/To-Your-Eternity-T3-Cap-6.mp4?rlkey=8j70j9zkr6y17fo8np4zo7uq9&st=4svr8f7q&raw=1', link2: 'https://drive.google.com/file/d/1yjdoLXayA4_QaiTSk9QLi3XqjuGvmlyJ/preview', title:'To Your Eternity T3 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/2it4ewslghx8vtsts6upa/To-Your-Eternity-T3-Cap-7.mp4?rlkey=h1l18k0blnvt6xexl0wgnbb7m&st=6u23g1rp&raw=1', link2: 'https://drive.google.com/file/d/1nkr_iF1tfOzOeT240jGZuC6k47UuhRkB/preview', title:'To Your Eternity T3 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1_NhHoLfqhkantkwtzn3ekJTxAPo3sqUo/preview', title:'To Your Eternity T3 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1J68mncT1iGJRA6hH2VVWk11sGIvAvaCC/preview', title:'To Your Eternity T3 Cap 9' },
         }
       },
       "32": {
@@ -1622,7 +1623,7 @@
           "15": { link:'https://www.dropbox.com/scl/fi/uqtiasi9049suz67w91mw/Gachiakuta-T1-Cap-15.mp4?rlkey=rt4cz9w4uzbkbm4sbomqg729f&st=j78mmd0n&raw=1', link2: 'https://drive.google.com/file/d/145mtOjsmppJbYSxGaekgzmd_tdFRdHAl/preview', title:'Gachiakuta T1 Cap 15' },
           "16": { link:'https://www.dropbox.com/scl/fi/gskk37ewm8iqq4nqqklqa/Gachiakuta-T1-Cap-16.mp4?rlkey=r9uagn7mrg2j89odijzpf60w7&st=rqz3kerl&raw=1', link2: 'https://drive.google.com/file/d/1qFWtIiOMn_fFyRPXx_n5wb9XZs3zOdxP/preview', title:'Gachiakuta T1 Cap 16' },
           "17": { link:'https://drive.google.com/file/d/1CP6xbNBo6vwjnym6RdCGm-0DoNWTEbpW/preview', title:'Gachiakuta T1 Cap 17' },
-          "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 18' },
+          "18": { link:'https://drive.google.com/file/d/1lgnKPlUlgYK8ft4YbZjoPpDSZXbh8w0z/preview', title:'Gachiakuta T1 Cap 18' },
           "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 19' },
           "20": { link:'&raw=1', title:'Gachiakuta T1 Cap 20' },
           "21": { link:'&raw=1', title:'Gachiakuta T1 Cap 21' },
@@ -1726,6 +1727,9 @@
           "16": { link:'https://www.dropbox.com/scl/fi/y1nhgehdrad7z2ckw18sh/One-Punch-Man-T2-Cap-11.mp4?rlkey=azuprv7g22nhjrmil6dqysylz&st=52nhyg9p&raw=1', title:'One Punch-Man T2 Cap 11' },
           "17": { link:'https://www.dropbox.com/scl/fi/jfq99ydch3ky2obnfq6zq/One-Punch-Man-T2-Cap-12.mp4?rlkey=d6ux6zf6rffcj3nfaw7qoaikw&st=67uuttj4&raw=1', title:'One Punch-Man T2 Cap 12' },
           "18": { link:'https://www.dropbox.com/scl/fi/o0vwaws7yufzvf0bs3s3v/One-Punch-Man-T2-Especial-6.mp4?rlkey=26ju0wkico88cwji2710lxqa2&st=zqq9tn0a&raw=1', title:'One Punch-Man T2 Especial 6' },
+        },
+        "4": {
+          "1": { link:'https://drive.google.com/file/d/16XcHfR5gJZPkhJ_6QpxOW1R71HcApwB-/preview', title:'One Punch-Man T3 Cap 1' },
         }
       },
       "41": {
@@ -2036,6 +2040,7 @@
           "3": { link:'https://www.dropbox.com/scl/fi/tsjz7bz2jqyqtqm3o88dc/Spy-Family-T3-Cap-3.mp4?rlkey=fy225l9ubtcex5bhfi8gat0qk&st=43tua16k&raw=1', link2: 'https://drive.google.com/file/d/1pItUIDJOzv-2gn7pElJqqVAIHcHD6ECS/preview', title:'Spy × Family T3 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/ssy2qf91agoemqiapwyhx/Spy-Family-T3-Cap-4.mp4?rlkey=mu0e8hzalf9k8cmdmuel3v2tw&st=8n1dtbv4&raw=1', link2: 'https://drive.google.com/file/d/1mfKA7Y-Hw8LB_u0LM6Vaaw04WUTsLzsJ/preview', title:'Spy × Family T3 Cap 4' },
           "5": { link: 'https://drive.google.com/file/d/1n_aDJZIlhwYUf2-DxXKSqJ3wSfalI7Wv/preview', title:'Spy × Family T3 Cap 5' },
+          "6": { link: 'https://drive.google.com/file/d/16tVbRmoixbYBZhsRAoiPp5hevpvWG_OP/preview', title:'Spy × Family T3 Cap 6' },
         }
       },
       "50": {
@@ -2226,6 +2231,7 @@
           "1": { link:'https://drive.google.com/file/d/1C16zoogP1JPPZANScxJP0z67WTxZYgIq/preview', link2: 'https://www.dropbox.com/scl/fi/sr54vz6tfaj7oqum850da/My-Hero-Academia-T8-Cap-1.mp4?rlkey=pzm4ztsdrcsj8kesrox9zlugi&st=oq2p9m3y&raw=1', title:'My Hero Academia T8 Cap 1' },
           "2": { link:'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', link2: 'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&raw=1', title:'My Hero Academia T8 Cap 2' },
           "3": { link:'https://drive.google.com/file/d/1qT5zJg0WrrWvazqmC8eByOgJWl2hCcoJ/preview', title:'My Hero Academia T8 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1DeZgMNC9P6-614PHPl8EMt6JHP35PONe/preview', title:'My Hero Academia T8 Cap 4' },
         }
       },
       "52": {
@@ -2299,6 +2305,7 @@
           "3": { link:'https://drive.google.com/file/d/1ZYTNt-vrHLTFEvDuscNs-3JC5fLZC4f2/preview', link2: 'https://www.dropbox.com/scl/fi/9i7ycmk5wwxa0ja0uhpgk/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-3.mp4?rlkey=yt8tg9r5tfoq31x02qst6zc9y&st=egtk9xj7&raw=1', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1FY_jZ61wRtSTS6akzxOvYvBvqTBXGcV8/preview', link2: 'https://www.dropbox.com/scl/fi/6u0gyjxomjfvh2nm40l0w/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-4.mp4?rlkey=7ul5jfhj5h4rkttdj5vwfrne3&st=6eu62t5d&raw=1', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1LGTe12Pezs-4VVuV4Zkz4XRTeXszP6vv/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1H0sq3zKrJxnLIAF_MlmuI1-cUAtom07M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6' },
         }
       },
       "55": {
@@ -2308,6 +2315,7 @@
           "3": { link:'https://drive.google.com/file/d/1XO_b-XfmYFmbhBWyewV8cWhagGROZvGj/preview', link2: 'https://www.dropbox.com/scl/fi/uqh3bni3aocfj12clor7r/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-3.mp4?rlkey=rtytkar8d973rd7mquz3z1tr3&st=eh0z7dsi&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 3' },
           "4": { link:'https://drive.google.com/file/d/1tycCUt59hcHopKPxqkPaZi6CJASstaZn/preview', link2: 'https://www.dropbox.com/scl/fi/1vetm4oi2yfkum6qy76bf/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-4.mp4?rlkey=t4yxb3f6tnhslvyd1y0cwiphg&st=285328hq&raw=1', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1h2Pk9Z-ZLzo_ULtRnbvzlamjrBfaA8-7/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1_gvtHRhB6n-4htLzhPvWyf_C97pHM4NU/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 6' },
         }
       },
       "56": {
@@ -2325,20 +2333,18 @@
           "11": { link:'https://drive.google.com/file/d/1hKGuI5Roij3WsJlN1t76Yhu5YL7_nY2S/preview', title:'Spice and Wolf T1 Cap 11' },
           "12": { link:'https://drive.google.com/file/d/11zG8Lbbvei5XR9soycL56KLlwDEsWHl6/preview', title:'Spice and Wolf T1 Cap 12' },
           "13": { link:'https://drive.google.com/file/d/1JHX0v0IXV5GlwsN-vJzOArG_n23aHfsQ/preview', title:'Spice and Wolf T1 Cap 13' },
-        },
-        "2": {
-          "1": { link:'https://drive.google.com/file/d/1pglakSh-bD0unhSIuBHomPUdIPtm40iV/preview', title:'Spice and Wolf T2 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/1wNnt0rn84YzzTAOck6OgU3kTPykFOA0s/preview', title:'Spice and Wolf T2 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1HR_N7Y3iwQNAdm-UuzU_ILXJQ7Qa3X7I/preview', title:'Spice and Wolf T2 Cap 3' },
-          "4": { link:'https://drive.google.com/file/d/1JYyO4-1ilWUdQYrxwIHorjweH8Q4jbE7/preview', title:'Spice and Wolf T2 Cap 4' },
-          "5": { link:'https://drive.google.com/file/d/1v04Gbvg6knodhu71HC-RHZeQdvFPdLFL/preview', title:'Spice and Wolf T2 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1aYn9OkC20MRnILNC8f22IMbyTAQ2rPjp/preview', title:'Spice and Wolf T2 Cap 6' },
-          "7": { link:'https://drive.google.com/file/d/1GyFLmD18niH-s3f-irhMzlOYP-Obs7so/preview', title:'Spice and Wolf T2 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1ZWTAYc2Qkj61Z9cfIQyF9OXluPedrsve/preview', title:'Spice and Wolf T2 Cap 8' },
-          "9": { link:'https://drive.google.com/file/d/1tpRqFwEpuQVjmkdvgGspg4HSmnKJRsxT/preview', title:'Spice and Wolf T2 Cap 9' },
-          "10": { link:'https://drive.google.com/file/d/1AhERccJvIMI8u32agU-JgwC5dok6J_sJ/preview', title:'Spice and Wolf T2 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1ov0f9V3kcwTGx8KtMTDNJzLxFC2v4KlX/preview', title:'Spice and Wolf T2 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1UogckdZh4kQN7HFV42i4FZVmasGqmwb2/preview', title:'Spice and Wolf T2 Cap 12' },
+          "14": { link:'https://drive.google.com/file/d/1pglakSh-bD0unhSIuBHomPUdIPtm40iV/preview', title:'Spice and Wolf T2 Cap 14' },
+          "15": { link:'https://drive.google.com/file/d/1wNnt0rn84YzzTAOck6OgU3kTPykFOA0s/preview', title:'Spice and Wolf T2 Cap 15' },
+          "16": { link:'https://drive.google.com/file/d/1HR_N7Y3iwQNAdm-UuzU_ILXJQ7Qa3X7I/preview', title:'Spice and Wolf T2 Cap 16' },
+          "17": { link:'https://drive.google.com/file/d/1JYyO4-1ilWUdQYrxwIHorjweH8Q4jbE7/preview', title:'Spice and Wolf T2 Cap 17' },
+          "18": { link:'https://drive.google.com/file/d/1v04Gbvg6knodhu71HC-RHZeQdvFPdLFL/preview', title:'Spice and Wolf T2 Cap 18' },
+          "19": { link:'https://drive.google.com/file/d/1aYn9OkC20MRnILNC8f22IMbyTAQ2rPjp/preview', title:'Spice and Wolf T2 Cap 19' },
+          "20": { link:'https://drive.google.com/file/d/1GyFLmD18niH-s3f-irhMzlOYP-Obs7so/preview', title:'Spice and Wolf T2 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1ZWTAYc2Qkj61Z9cfIQyF9OXluPedrsve/preview', title:'Spice and Wolf T2 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1tpRqFwEpuQVjmkdvgGspg4HSmnKJRsxT/preview', title:'Spice and Wolf T2 Cap 22' },
+          "23": { link:'https://drive.google.com/file/d/1AhERccJvIMI8u32agU-JgwC5dok6J_sJ/preview', title:'Spice and Wolf T2 Cap 23' },
+          "24": { link:'https://drive.google.com/file/d/1ov0f9V3kcwTGx8KtMTDNJzLxFC2v4KlX/preview', title:'Spice and Wolf T2 Cap 24' },
+          "25": { link:'https://drive.google.com/file/d/1UogckdZh4kQN7HFV42i4FZVmasGqmwb2/preview', title:'Spice and Wolf T2 Cap 25' },
         }
       },
 
