--- a/anime-detail.html
+++ b/anime-detail.html
@@ -232,6 +232,8 @@
   <audio id="futarisolocamp-ost" loop><source src="https://www.dropbox.com/scl/fi/r78qemts4onvpu35xentb/Official-Audio.mp3?rlkey=jdhdtna1cizhvwlqur9jk60iu&st=wh2o8bpm&raw=1" type="audio/mpeg"></audio>
   <audio id="tojima-ost" loop><source src="https://www.dropbox.com/scl/fi/t3chgli1kyjvp2bonmei2/Tojima-Tanzaburo-Wants-To-Be-A-Kamen-Rider-OP-FULL-Wanna-Be-by-TeddyLoid-feat.-Shigeru-Matsuzaki.mp3?rlkey=pharcldwlirapw2f25jgijhof&st=qs93guvw&raw=1" type="audio/mpeg"></audio>
   <audio id="almachan-ost" loop><source src="https://www.dropbox.com/scl/fi/58yc7nfovronyfcigs5k8/Alma-chan-wa-Kazoku-ni-Naritai-Ending-Full-Arifuretetai-by-KAF.mp3?rlkey=6gl9bayyvblte648fswou8zyj&st=1p1m5x51&raw=1" type="audio/mpeg"></audio>
+  <audio id="spice-ost" loop><source src="https://www.dropbox.com/scl/fi/q7uucujmeg0651xokdjam/Spice-and-Wolf-2024-ED-Ending-2-Creditless-4K-24FPS.mp3?rlkey=zjl1tecsqu9df9raidkr1xtt1&st=uoty142s&raw=1" type="audio/mpeg"></audio>
+  <audio id="oyasumi" loop><source src="https://www.dropbox.com/scl/fi/z1kusweadab5q7kcb81qp/Oyasumi-Sekusu-Episode-4-Ending.mp3?rlkey=zoz6n8cgbfy3ciys39vaqdrrv&st=8nj6o0vy&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3262,7 +3264,23 @@
           }
         ]
       },
-
+      57: {
+        title: "Oyasumi Sex",
+        desc: "Yui le comenta a su hermano que alguien se le confesó, lo que causa que este comience a sentirse celoso y comenzar a ver diferente a su hermanita. Una noche mientras ella dormía, este decide aprovecharse y hacerla suya...",
+        cover: "oyasumi.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "oyasumi1.jpg",
+            eps: [
+              { title: "Oyasumi Sex T1 Cap 1"},
+              { title: "Oyasumi Sex T1 Cap 2"},
+              { title: "Oyasumi Sex T1 Cap 3"},
+              { title: "Oyasumi Sex T1 Cap 4"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -3470,6 +3488,8 @@
         53: ['futarisolocamp-ost'],
         54: ['tojima-ost'],
         55: ['almachan-ost'],
+        56: ['spice-ost'],
+        57: ['oyasumi-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
