--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
       {id:54, title:"Tōjima Tanzaburō wa Kamen Rider ni Naritai", aliases: ["Tojima Wants to Be a Kamen Rider"], img:"tojima1.jpg", rating:4.8, genres:["Comedia","Acción","Tokusatsu","Seinen"]},
       {id:55, title:"Alma-chan wa Kazoku ni Naritai", aliases: ["Alma-chan Wants to Be a Family!"], img:"almachan.jpg", rating:4.6, genres:["Comedia","Romance","Ciencia ficción","Seinen"]},
       {id:56, title:"Spice and Wolf", aliases: ["Okami to Kōshinryō"], img:"drgfedfgdf.jpg", rating:4.8, genres:["Acción","Romance","Ciencia ficción","Aventura","Fantasía","Drama","Seinen"]},
+      {id:57, title:"Oyasumi Sex", img:"oyasumi.jpg", rating:4.8, genres:["Hentai","Romance","Slice of Life","Seijin"]},
     ];
 
     /* ----------------------------
